tests/test_files_pa3/errors/IfElseWhileBad.ic
class A
{
	
	static void main(string[] args) { }

	void foo()
	{
		int x;
		string str;
		boolean bool;
		
		x = 4;
		str = "s";
		bool = true;
		
		if(x){
			bool = !bool;
		}
		
		if(str){
			bool = !bool;
		}
		else{}
		
		while(x){break;}
		
		return;
	}
	
}